[project]
name = "python"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jsonschema>=4.23.0",
    "logging>=0.4.9.6",
    "numpy>=2.2.3",
    "pandas>=2.2.3",
    "pydantic>=2.10.6",
    "pymysql>=1.1.1",
    "rich>=13.9.4",
    "ruff>=0.11.10",
    "sqlalchemy>=2.0.41",
    "tqdm>=4.67.1",
]
